# claude-session-analyzer

./: .gitignore  LICENSE  README.md  profile.py  pyproject.toml
.github/workflows/: release.yml
claude_trace/: cli.py  tui.py
csa/: cli.py  model.py  pricing.py  tui.py
docs/: USER-GUIDE.md
tests/: test_model.py
