[project]
name = "claude-trace"
version = "0.1.0"
description = "Understand your Claude Code usage: token/cost/time analysis and a TUI over local JSONL transcripts."
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["textual>=8"]

[project.scripts]
claude-trace = "claude_trace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_trace"]
