[project]
name = "claude-session-analyzer"
version = "0.1.0"
description = "Understand your Claude Code usage: token/cost/time analysis and a TUI over local JSONL transcripts."
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["textual>=8"]

[project.scripts]
csa = "csa.cli:main"
claude-session-analyzer = "csa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["csa"]
